[package]
name = "jl"
version = "0.3.0"
authors = ["Alexei Ozerov alexei.ozerov.7@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
termion = "1.5.5"
clap = "2.33.3"